--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="CJ Nehls" />
+    <meta property="og:description" content="Author of emotionally rich fiction & poetry." />
+    <meta property="og:image" content="https://cjnehls.com/CJNehlsLogo.png" />
+    <meta property="og:url" content="https://cjnehls.com/" />
+    <meta property="og:type" content="website" />
     <title>CJ Nehls | Author</title>
     <link rel="icon" type="image/ico" href="/cjnehlslogo.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
